internal/xds/translator/testdata/out/xds-ir/compressor-multiple-settings.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        pathSeparatedPrefix: /one
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      requestHeadersToRemove:
      - accept-encoding
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor.gzip:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            compressorLibrary:
              name: envoy.compression.gzip.compressor
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                chunkSize: 4096
                compressionLevel: BEST_SPEED
                compressionStrategy: RLE
                memoryLevel: 4
                windowBits: 12
            responseDirectionConfig: {}
    - match:
        pathSeparatedPrefix: /two
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-2
              namespace: default
      name: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
      requestHeadersToRemove:
      - accept-encoding
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor.gzip:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            compressorLibrary:
              name: envoy.compression.gzip.compressor
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                chunkSize: 8192
                compressionLevel: COMPRESSION_LEVEL_9
                compressionStrategy: FIXED
                memoryLevel: 8
                windowBits: 15
            responseDirectionConfig: {}
